# leakshield

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  Makefile  NOTICE  README.md  SECURITY.md  docker-compose.yml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
assets/: README.md
docs/: api.md  architecture.md  dlp-categories.md  openapi.yaml  setup-wizard.md
docs/wiki/: FAQ.md  (+18 more)
gateway/: Dockerfile  go.mod  go.sum
inspector/: Dockerfile  README.md  pyproject.toml
inspector/src/leakshield_inspector/: __init__.py  __main__.py  cache.py  categories.py  config.py  healthcheck.py  observability.py  server.py
inspector/src/leakshield_inspector/backends/: __init__.py  base.py  llamacpp.py  mock.py  ollama.py  openai_compat.py  vllm.py
inspector/src/leakshield_inspector/proto/: __init__.py  inspector_pb2.py  inspector_pb2.pyi  inspector_pb2_grpc.py
inspector/src/leakshield_inspector/recognizers/: __init__.py  credentials.py  presidio_adapter.py  turkish.py
inspector/src/leakshield_inspector/strategies/: __init__.py  base.py  hybrid.py  mock.py
inspector/tests/: adversarial.jsonl  conftest.py  test_adversarial.py  test_cache.py  test_categories.py  test_hybrid_strategy.py  test_recognizers_credentials.py  test_recognizers_turkish.py  test_server_smoke.py
panel/: .env.example  Dockerfile  README.md  auth.ts  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.json
scripts/: sync-wiki.sh
(+162 files in other folders)
