[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leakshield-inspector"
version = "0.1.0"
description = "LeakShield DLP inspector — gRPC service that classifies prompts via local LLM"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "LeakShield contributors" }]

dependencies = [
    "grpcio>=1.68",
    "grpcio-tools>=1.68",
    "protobuf>=5.28",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "structlog>=24.4",
    "presidio-analyzer>=2.2.355",
    "presidio-anonymizer>=2.2.355",
    "regex>=2024.9",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "opentelemetry-api>=1.28",
    "opentelemetry-sdk>=1.28",
    "opentelemetry-exporter-otlp>=1.28",
]

[project.optional-dependencies]
vllm = ["vllm>=0.6"]
llamacpp = ["llama-cpp-python>=0.3"]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
    "pip-audit>=2.7",
]

[project.scripts]
leakshield-inspector = "leakshield_inspector.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C90"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
